# Confidently-Routine

./: .gitignore  LICENSE  README.md  capacitor.config.ts  index.html  main.js  package-lock.json  package.json  playwright.config.ts  rollup.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle
android/app/src/main/java/com/millihasap/confidentlyroutine/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/css/base/: style.css  theme.css
assets/css/components/: mobile-nav.css  modal.css
assets/css/layouts/: header.css  sidebar.css
assets/css/pages/: dashboard.css  login.css  my-routine.css  notes.css  routine.css  settings.css
assets/js/: app.js  store.js
assets/js/core/: ErrorHandler.js
assets/js/core/storage/: HabitEntryStore.js  HabitStore.js  NoteStore.js  SleepStore.js  StorageService.js  TaskStore.js  UserStore.js
assets/js/modules/auth/: auth.js
assets/js/modules/dashboard/: dashboard.js
assets/js/modules/my-routine/: my-routine.js
assets/js/modules/notes/: notes.js
assets/js/modules/routines/: routines.js
assets/js/modules/settings/: settings.js
assets/js/utils/: charts.js  dom-helpers.js  dropdown.js  i18n.js  mobile-nav.js  theme.js  translations.js
e2e/: smoke.spec.ts
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
scripts/: copy-www.js  install-7za-wrapper.js
scripts/7za-wrapper/: main.go
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ConfirmModal.tsx  DatePicker.tsx  Header.tsx  Heatmap.tsx  Layout.tsx  MarkdownToolbar.tsx  MobileNav.tsx  Select.tsx  Sidebar.tsx  ToastHost.tsx  charts.tsx  ui.tsx
src/lib/: avatarImage.test.ts  avatarImage.ts  backup.ts  colors.ts  dateGrid.test.ts  dateGrid.ts  dates.test.ts  dates.ts  dialogA11y.ts  heatmap.test.ts  heatmap.ts  i18n.test.ts  i18n.ts  markdown.test.ts  markdown.ts  markdownEditor.test.ts  markdownEditor.ts  notifications.test.ts  notifications.ts  reminders.test.ts  reminders.ts  storage.ts  stores.test.ts  stores.ts  streaks.test.ts  streaks.ts  tasks.test.ts  tasks.ts  theme.ts  toast.ts  translations.ts  updater.test.ts  updater.ts
src/pages/: Dashboard.tsx  Login.tsx  MyRoutine.tsx  Notes.tsx  Settings.tsx  Tasks.tsx
src/styles/: app.css
views/: dashboard.html  login.html  my-routine.html  notes.html  routines.html  settings.html
