[package]
name = "app"
version = "2.0.1"
description = "Confidently Routine - habit, task and notes tracker"
authors = ["Cholukov Hangeldi"]
license = "MIT"
repository = "https://github.com/HRuler19/Confidently-Routine"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"

# The updater plugin only supports desktop - there's no equivalent
# self-update flow on Android/iOS, where the store handles updates instead.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
