[package]
name = "app"
version = "2.0.2"
description = "Confidently Routine - habit, task and notes tracker"
authors = ["Cholukov Hangeldi"]
license = "MIT"
repository = "https://github.com/HRuler19/Confidently-Routine"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# The updater plugin only supports desktop - there's no equivalent
# self-update flow on Android/iOS, where the store handles updates instead.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# Size-optimised release profile (Tauri's recommended settings). Shrinks the
# native library that ships in every bundle - most visibly the Android APK,
# whose universal build otherwise carries a full copy of this binary per ABI.
[profile.release]
opt-level = "s"    # optimise for size rather than raw speed
lto = true         # cross-crate link-time optimisation drops dead code
codegen-units = 1  # one unit lets LTO strip the most
strip = true       # remove debug symbols from the final binary
panic = "abort"    # no unwinding tables - smaller, and fine for an app binary
